fix(bsky): some unthemed elements and a contrast issue

--- a/styles/bsky/catppuccin.user.css
+++ b/styles/bsky/catppuccin.user.css
@@ -212,6 +212,26 @@
       background-color: @text !important;
     }
 
+    /* fixes a contrast issue when the suggested follows button is enabled (very ugly selector) */
+    button[data-testid="suggestedFollowsBtn"][style*="background-color: rgb(255, 255, 255)"] > svg > path {
+      fill: @base !important;
+    }
+    
+    /* text inside most buttons */
+    button > div > div[style~="color: rgb(0, 0, 0)"] {
+      color: @base !important;
+    }
+
+    /* search bar text */
+    [role="search"] {
+      --placeholderTextColor: @subtext1 !important;
+    }
+
+    /* search bar icon */
+    svg[style^="color: rgb(141, 142, 150)"] {
+      color: @subtext1 !important;
+    }
+
     /* small icons */
     path[fill="#ffffff"] {
       fill: @text;
